--- a/projects/ngx-dt-table/src/lib/dt-table.component.html
+++ b/projects/ngx-dt-table/src/lib/dt-table.component.html
@@ -1,6 +1,6 @@
 <ng-template #headerColumns let-auxColumns>
   <!-- auxColumns: DtColumnDirective[] -->
-  <div class="mat-header-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.ngStyle">
+  <div class="dt-header-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.ngStyle">
     <div (click)="_sort(column)">
       <ng-template [ngIf]="!column.headerTemplate">{{column.header}}</ng-template>
       <ng-template [ngTemplateOutlet]="column.headerTemplate"></ng-template>
@@ -11,9 +11,9 @@
 
 <ng-template #bodyColumns let-auxColumns let-row="row">
   <!-- auxColumns: DtColumnDirective[] -->
-  <!-- row: MatxRow -->
+  <!-- row: DtRow -->
   <!-- form: NgForm -->
-  <div class="mat-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.ngStyle">
+  <div class="dt-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.ngStyle">
     <ng-template [ngIf]="!editable || !column.editorTemplate || !row.editing" [ngIfElse]="columnEditor">
       <ng-template [ngIf]="!column.cellTemplate">{{get(row.item, column.field)}}</ng-template>
       <ng-template [ngTemplateOutlet]="column.cellTemplate"
@@ -27,11 +27,11 @@
 </ng-template>
 
 
-<div class="matx-table-container mat-table" [ngStyle]="scrollableStyle">
-  <div class="mat-header-row" mat-header-row>
-    <div class="matx-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length" [ngStyle]="frozenLeftStyle">
-      <div class="mat-header-cell dt-cell-expander" *ngIf="rowDetail"></div>
-      <div class="mat-header-cell dt-cell-select" *ngIf="selectable">
+<div class="dt-table-container" [ngStyle]="scrollableStyle">
+  <div class="dt-header-row">
+    <div class="dt-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length" [ngStyle]="frozenLeftStyle">
+      <div class="dt-header-cell dt-cell-expander" *ngIf="rowDetail"></div>
+      <div class="dt-header-cell dt-cell-select" *ngIf="selectable">
         <input *ngIf="!selectAllTemplate; else selectAllTemplateOutlet" type="checkbox"
                [checked]="allSelected || someSelected" [indeterminate]="someSelected" (change)="toggleSelectAll($event)">
         <ng-template #selectAllTemplateOutlet [ngTemplateOutlet]="selectAllTemplate"
@@ -47,15 +47,19 @@
     </div>
   </div>
 
+  <ng-template [ngIf]="loading">
+    <ng-template [ngTemplateOutlet]="loadingTemplate"></ng-template>
+  </ng-template>
+
   <ng-template ngFor let-row [ngForOf]="paginate(rows)">
-    <form [formGroup]="row.form" class="mat-row" mat-row (dblclick)="startEditing(row)" (submit)="submitRow(row)"
+    <form [formGroup]="row.form" class="dt-row" (dblclick)="startEditing(row)" (submit)="submitRow(row)"
           (keyup.escape)="resetRow(row)">
       <button type="submit" hidden></button>
-      <div class="matx-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length" [ngStyle]="frozenLeftStyle">
-        <div class="mat-cell dt-cell-expander" *ngIf="rowDetail">
+      <div class="dt-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length" [ngStyle]="frozenLeftStyle">
+        <div class="dt-cell dt-cell-expander" *ngIf="rowDetail">
           <ng-template [ngTemplateOutlet]="expandRowButtonTemplate" [ngTemplateOutletContext]="{$implicit: row}"></ng-template>
         </div>
-        <div class="mat-cell dt-cell-select" *ngIf="selectable">
+        <div class="dt-cell dt-cell-select" *ngIf="selectable">
           <input *ngIf="!selectRowTemplate; else selectRowTemplateOutlet"
                  type="checkbox" [checked]="isRowSelected(row)" (change)="toggleSelectRow(row, $event)">
           <ng-template #selectRowTemplateOutlet [ngTemplateOutlet]="selectRowTemplate"
@@ -70,7 +74,7 @@
         <ng-template [ngTemplateOutlet]="bodyColumns" [ngTemplateOutletContext]="{$implicit: frozenRightColumns, row: row}"></ng-template>
       </div>
     </form>
-    <div class="mat-detail-row" *ngIf="rowDetail && row.expanded">
+    <div class="dt-detail-row" *ngIf="rowDetail && row.expanded">
       <ng-template [ngTemplateOutlet]="rowDetail" [ngTemplateOutletContext]="{$implicit: row.item}"></ng-template>
     </div>
   </ng-template>
@@ -78,17 +82,17 @@
 
 <div *ngIf="renderPrintable" #printable hidden>
   <table class="mat-table table">
-    <tr class="mat-header-row">
+    <tr class="dt-header-row">
       <ng-template ngFor let-column [ngForOf]="columns">
-        <th *ngIf="!column.noPrintable" class="mat-header-cell">
+        <th *ngIf="!column.noPrintable" class="dt-header-cell">
           <ng-template [ngIf]="!column.headerTemplate">{{column.header}}</ng-template>
           <ng-template [ngTemplateOutlet]="column.headerTemplate"></ng-template>
         </th>
       </ng-template>
     </tr>
-    <tr *ngFor="let row of rows" class="mat-row">
+    <tr *ngFor="let row of rows" class="dt-row">
       <ng-template ngFor let-column [ngForOf]="columns">
-        <td *ngIf="!column.noPrintable" class="mat-cell">
+        <td *ngIf="!column.noPrintable" class="dt-cell">
           <ng-template [ngIf]="!column.cellTemplate">{{get(row.item, column.field)}}</ng-template>
           <ng-template [ngTemplateOutlet]="column.cellTemplate"
                        [ngTemplateOutletContext]="{$implicit: row.item, row: row}"></ng-template>
