--- a/projects/ngx-dt-table/src/lib/dt-table.component.html
+++ b/projects/ngx-dt-table/src/lib/dt-table.component.html
@@ -1,6 +1,6 @@
 <ng-template #headerColumns let-auxColumns>
   <!-- auxColumns: DtColumnDirective[] -->
-  <div class="dt-header-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.ngStyle">
+  <div class="dt-header-cell" *ngFor="let column of auxColumns" [ngClass]="column.ngClass" [ngStyle]="column.columnNgStyle">
     <div (click)="_sort(column)">
       <ng-template [ngIf]="!column.headerTemplate">{{column.header}}</ng-template>
       <ng-template [ngTemplateOutlet]="column.headerTemplate"></ng-template>
@@ -48,44 +48,54 @@
 </ng-template>
 
 
-<div class="dt-table-container" [ngStyle]="scrollableStyle">
-  <div class="dt-header-row">
-    <div class="dt-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length" [ngStyle]="frozenLeftStyle">
-      <div class="dt-header-cell dt-cell-expander" *ngIf="rowDetail"></div>
-      <div class="dt-header-cell dt-cell-select" *ngIf="selectable">
-        <input *ngIf="!selectAllTemplate; else selectAllTemplateOutlet" type="checkbox"
-               [checked]="allSelected || someSelected" [indeterminate]="someSelected" (change)="toggleSelectAll($event)">
-        <ng-template #selectAllTemplateOutlet [ngTemplateOutlet]="selectAllTemplate"
-                     [ngTemplateOutletContext]="{$implicit: this}"></ng-template>
+<cdk-virtual-scroll-viewport [itemSize]="50">
+  <div class="dt-table-container" [ngStyle]="scrollableStyle">
+    <div class="dt-header" [style.top]="inverseTranslation">
+      <div class="dt-row">
+        <div class="dt-table-frozen-left" *ngIf="selectable || rowDetail || frozenLeftColumns.length"
+             [ngStyle]="frozenLeftStyle">
+          <div class="dt-header-cell dt-cell-expander" *ngIf="rowDetail"></div>
+          <div class="dt-header-cell dt-cell-select" *ngIf="selectable">
+            <input *ngIf="!selectAllTemplate; else selectAllTemplateOutlet" type="checkbox"
+                   [checked]="allSelected || someSelected" [indeterminate]="someSelected"
+                   (change)="toggleSelectAll($event)">
+            <ng-template #selectAllTemplateOutlet [ngTemplateOutlet]="selectAllTemplate"
+                         [ngTemplateOutletContext]="{$implicit: this}"></ng-template>
+          </div>
+          <ng-template [ngTemplateOutlet]="headerColumns"
+                       [ngTemplateOutletContext]="{$implicit: frozenLeftColumns}"></ng-template>
+        </div>
+        <div class="dt-scrollable-columns">
+          <ng-template [ngTemplateOutlet]="headerColumns"
+                       [ngTemplateOutletContext]="{$implicit: scrollableColumns}"></ng-template>
+        </div>
+        <div class="dt-table-frozen-right" *ngIf="frozenRightColumns.length" [ngStyle]="frozenRightStyle">
+          <ng-template [ngTemplateOutlet]="headerColumns"
+                       [ngTemplateOutletContext]="{$implicit: frozenRightColumns}"></ng-template>
+        </div>
       </div>
-      <ng-template [ngTemplateOutlet]="headerColumns" [ngTemplateOutletContext]="{$implicit: frozenLeftColumns}"></ng-template>
+
+      <ng-template [ngIf]="loading">
+        <ng-template [ngTemplateOutlet]="loadingTemplate"></ng-template>
+      </ng-template>
     </div>
-    <div class="dt-scrollable-columns">
-      <ng-template [ngTemplateOutlet]="headerColumns" [ngTemplateOutletContext]="{$implicit: scrollableColumns}"></ng-template>
-    </div>
-    <div class="dt-table-frozen-right" *ngIf="frozenRightColumns.length" [ngStyle]="frozenRightStyle">
-      <ng-template [ngTemplateOutlet]="headerColumns" [ngTemplateOutletContext]="{$implicit: frozenRightColumns}"></ng-template>
-    </div>
+
+    <ng-template cdkVirtualFor let-row [cdkVirtualForOf]="paginate(rows)">
+      <div *ngIf="!row.editing" class="dt-row" (dblclick)="startEditing(row)"
+           (keyup.escape)="resetRow(row)">
+        <ng-template [ngTemplateOutlet]="rowContent" [ngTemplateOutletContext]="{$implicit: row}"></ng-template>
+      </div>
+      <form *ngIf="row.editing" [formGroup]="row.form" class="dt-row" (submit)="submitRow(row)"
+            (keyup.escape)="resetRow(row)">
+        <button type="submit" hidden></button>
+        <ng-template [ngTemplateOutlet]="rowContent" [ngTemplateOutletContext]="{$implicit: row}"></ng-template>
+      </form>
+      <div class="dt-detail-row" *ngIf="rowDetail && row.expanded">
+        <ng-template [ngTemplateOutlet]="rowDetail" [ngTemplateOutletContext]="{$implicit: row.item}"></ng-template>
+      </div>
+    </ng-template>
   </div>
-
-  <ng-template [ngIf]="loading">
-    <ng-template [ngTemplateOutlet]="loadingTemplate"></ng-template>
-  </ng-template>
-
-  <ng-template ngFor let-row [ngForOf]="paginate(rows)">
-    <div *ngIf="!row.editing" class="dt-row" (dblclick)="startEditing(row)"
-          (keyup.escape)="resetRow(row)">
-      <ng-template [ngTemplateOutlet]="rowContent" [ngTemplateOutletContext]="{$implicit: row}"></ng-template>
-    </div>
-    <form *ngIf="row.editing" [formGroup]="row.form" class="dt-row" (submit)="submitRow(row)" (keyup.escape)="resetRow(row)">
-      <button type="submit" hidden></button>
-      <ng-template [ngTemplateOutlet]="rowContent" [ngTemplateOutletContext]="{$implicit: row}"></ng-template>
-    </form>
-    <div class="dt-detail-row" *ngIf="rowDetail && row.expanded">
-      <ng-template [ngTemplateOutlet]="rowDetail" [ngTemplateOutletContext]="{$implicit: row.item}"></ng-template>
-    </div>
-  </ng-template>
-</div>
+</cdk-virtual-scroll-viewport>
 
 <div *ngIf="renderPrintable" #printable hidden>
   <table class="mat-table table">
