--- a/projects/ngx-dt-table/src/lib/dt-table.component.scss
+++ b/projects/ngx-dt-table/src/lib/dt-table.component.scss
@@ -6,9 +6,22 @@ $dt-row-horizontal-padding: 24px;
   display: block;
   overflow: auto;
   background: white;
+  height: 500px;
 }
 
 .dt-table-container {
+  background: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+cdk-virtual-scroll-viewport {
+  height: 100%;
+  background: inherit;
+}
+
+::ng-deep .cdk-virtual-scroll-content-wrapper {
   background: inherit;
 }
 
@@ -35,20 +48,24 @@ $dt-row-horizontal-padding: 24px;
   border-left: 2px solid rgba(0, 0, 0, 0.12);
 }
 
-.dt-header-row {
+.dt-header {
   position: sticky;
   top: 0;
   z-index: 20;
   min-height: $dt-header-row-min-height;
   background: inherit;
+
+  .dt-row {
+    min-height: $dt-header-row-min-height;
+  }
 }
 
-.dt-row, .dt-detail-row, .dt-footer-row {
+.dt-row, .dt-detail-row {
   min-height: $dt-row-min-height;
   background: inherit;
 }
 
-.dt-row, .dt-header-row, .dt-footer-row {
+.dt-row {
   display: flex;
 
   // Workaround for https://goo.gl/pFmjJD in IE 11. Adds a pseudo
