--- a/projects/demo/src/app/pages/print/print.component.html
+++ b/projects/demo/src/app/pages/print/print.component.html
@@ -1,4 +1,5 @@
 <button mat-raised-button color="primary" (click)="table.print()">Print</button>
+<button mat-raised-button color="accent" (click)="getCsv(table)">Csv</button>
 <dt-table #table [data]="players">
   <dt-column field="id" header="Id"></dt-column>
   <dt-column field="name" header="Name"></dt-column>
@@ -6,3 +7,7 @@
   <dt-column field="club" header="Club"></dt-column>
   <dt-column field="national" header="National"></dt-column>
 </dt-table>
+
+<h2 *ngIf="csv">CSV</h2>
+
+<pre *ngIf="csv">{{csv}}</pre>
