--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,26 +1,25 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$demo-primary: mat-palette($mat-indigo);
-$demo-accent: mat-palette($mat-pink, A200, A100, A400);
+$demo-primary: mat.define-palette(mat.$indigo-palette);
+$demo-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$demo-warn: mat-palette($mat-red);
+$demo-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$demo-theme: mat-light-theme((
+$demo-theme: mat.define-light-theme((
   color: (
     primary: $demo-primary,
     accent: $demo-accent,
@@ -31,11 +30,10 @@ $demo-theme: mat-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($demo-theme);
+@include mat.all-component-themes($demo-theme);
 
 @import "~highlight.js/styles/github.css";
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
